# CFP

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  setup_circuits.sh
.github/workflows/: ci.yml
cfp/: __init__.py
cfp/cli/: main.py
cfp/core/: __init__.py  block_producer.py  config.py  escape_hatch.py  tokenomics.py
cfp/core/auction/: __init__.py  commit_reveal.py  scoring.py  transcript.py
cfp/core/dag/: __init__.py  epoch.py  sequencer.py  vertex.py
cfp/core/intent/: __init__.py  auction.py  intent.py  solver.py  verifiable_auction.py
cfp/core/prover/: __init__.py  auction_prover.py  prover.py
cfp/core/registry/: __init__.py  solver_registry.py
cfp/core/state/: __init__.py  ledger.py  merkle.py  transaction.py  utxo.py
cfp/core/storage/: __init__.py  sqlite_adapter.py  storage_manager.py
cfp/crypto/: __init__.py  poseidon.py
cfp/network/: __init__.py  discovery.py  gossip.py  handshake.py  node.py  peer.py  protocol.py  sync.py
cfp/utils/: __init__.py  benchmark.py  logger.py  validation.py
circuits/: auction_select.circom  intent_satisfy.circom  poseidon_check.circom  simple_transition.circom  utxo_transition.circom
docs/: documentation.md  security.md  specification.md
params/: poseidon.json  poseidon_bn254_constants.json
tests/integration/: test_adversarial.py  test_handshake_flow.py  test_persistence.py  test_security_properties.py  test_verifiable_auction.py  test_zk_proof.py
tests/unit/: test_auction_prover.py  test_block_producer.py  test_commit_reveal.py  test_crypto.py  test_dag.py  test_epoch.py  test_escape_hatch.py  test_handshake.py  test_intent.py  test_ledger.py  test_network.py  test_poseidon.py  test_prover.py  test_registry.py  test_scoring.py  test_security.py  test_storage.py  test_tokenomics.py  test_transcript.py
